Closed Bug 1611724 Opened 6 years ago Closed 6 years ago

[css-grid] align-content:baseline fails for single-line block grid items

Categories

(Core :: Layout: Grid, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

(Keywords: testcase)

Attachments

(2 files)

No description provided.
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bae3742d10e2 [css-grid] Add NS_FRAME_CONTAINS_RELATIVE_BSIZE to grid items with content first baseline alignment to ensure lines are marked dirty in a IsBResize reflow. r=dholbert
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: