Bug 1611724 - [css-grid] Add NS_FRAME_CONTAINS_RELATIVE_BSIZE to grid items with content first baseline alignment to ensure lines are marked dirty in a IsBResize reflow.  r=dholbert

To make this condition true to be clear:
https://searchfox.org/mozilla-central/rev/aa684c0c76136be80af4c6e429bce81dea55c429/layout/generic/nsBlockFrame.cpp#2478-2479

Differential Revision: https://phabricator.services.mozilla.com/D61100